2008-10-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* libs/gst/base/gstbytereader.c:
	Use GST_(READ|WRITE)_(FLOAT|DOUBLE)_(LE|BE) instead of our own
	copies of them.

2008-10-23  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* docs/gst/gstreamer-sections.txt:
	* gst/gstutils.h:
	API: Move float endianness conversion macros from libgstfloatcast
	to core as it's useful in general, even in core. Fixes bug #555196.
	This adds GDOUBLE_FROM_BE, GDOUBLE_FROM_LE, GDOUBLE_TO_BE,
	GDOUBLE_TO_LE, GDOUBLE_SWAP_LE_BE, GFLOAT_FROM_BE, GFLOAT_FROM_LE,
	GFLOAT_TO_BE, GFLOAT_TO_LE, GFLOAT_SWAP_LE_BE.

	Also add GST_READ_ and GST_WRITE_ macros for floats and doubles:
	GST_READ_FLOAT_LE, GST_READ_FLOAT_BE, GST_READ_DOUBLE_LE,
	GST_READ_DOUBLE_BE, GST_WRITE_FLOAT_LE, GST_WRITE_FLOAT_BE,
	GST_WRITE_DOUBLE_LE, GST_WRITE_DOUBLE_BE.

2008-10-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/base/gstbytereader.c: (gst_byte_reader_get_data),
	(gst_byte_reader_peek_data):
	* libs/gst/base/gstbytereader.h:
	* win32/common/libgstbase.def:
	API: Add gst_byte_reader_get_data and gst_byte_reader_peek_data
	to get a pointer to the data at the current position and have
	a guaranteed size.

2008-10-22  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Fix a bug in the output of the configure script summary
	when --gst-disable-registry is supplied

2008-10-22  Jan Schmidt  <jan.schmidt@sun.com>

	* libs/gst/base/gstbitreader.c:
	* libs/gst/base/gstbytereader.c:
	Fix the names of 2 functions in the docs strings.

2008-10-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_prepare_output_buffer),
	(gst_base_transform_buffer_alloc), (gst_base_transform_suggest):
	Protect sink_alloc caps with the sinkpad lock to avoid nasty caps
	refcount problems as seen in banshee and maybe also in farsight2.
	Remove atomic int now that we need to take the lock anyways.
